--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -153,6 +153,9 @@ a:focus {
     .navbar-custom.top-nav-collapse {
         border-bottom: 1px solid rgba(255,255,255,0.3);
     }
+    .intro-section {
+      margin-top: -400px;
+    }
 }
 
  // Full Page Image Intro Section
@@ -174,6 +177,9 @@ a:focus {
 }
 
 @media (max-width:500px) {
+    .intro-body {
+      padding: 0px;
+    }
     .intro {
         background: url(../img/intro-bg-sm.jpg) no-repeat bottom center scroll;
     }
@@ -187,19 +193,31 @@ a:focus {
     }
 }
 
+@media (max-width: 767px) {
+  section.intro {
+    padding: 0px;
+    .intro-body {
+      padding: 100px 0px;
+    }
+  }
+}
+
 .download-section {
     width: 100%;
     padding: 50px 15px;
     color: $light;
 }
 
- .intro, #background, #press {
-    display: table;
-    width: 100%;
-    height: auto;
-    padding: 100px 0;
-    color: $light;
-    text-align: left;
+.intro, #background, #press {
+   display: table;
+   width: 100%;
+   height: auto;
+   color: $light;
+   text-align: left;
+}
+
+.intro, #background, #press .semitrans {
+  padding: 100px 0px;
 }
 
 .intro, #background, #press, .download-section {
@@ -224,22 +242,18 @@ a:focus {
 }
 
 
-        section.intro {
-
+section.intro {
     .brand-heading {
         text-align: center;
         text-transform: none;
         font-size: 48px;
     }
-
-
-
     .intro-text {
         text-align: center;
         font-size: 18px;
         margin-bottom: 36px;
+        font-weight: 400;
     }
-
 }
 
 #email {
@@ -415,19 +429,28 @@ a:focus {
 }
 
 #press {
+    .semitrans {
+      background: rgba(0,0,0,.6)
+    }
+    p {
+    }
     h2 {
         text-align: center;
+    }
+    a {
+      color: lighten($primary, 20%);
     }
     a:hover,
     a:focus {
         text-decoration: none;
-        color: lighten($primary, 20%);
+        color: lighten($primary, 60%);
     }
     img {
         max-width: 100%;
     }
     li {
-        padding-bottom: 15px;
+      font-weight: 600;
+      padding-bottom: 15px;
     }
 }
 
@@ -607,8 +630,20 @@ section#privacy {
 
 section#footer {
     padding-top:30px;
-    p {
-        font-size: 14px;
+    a {
+      // color: lighten($primary, 20%);
+      font-weight: 600;
+    }
+    .copyright p {
+      font-size: 14px;
+      margin-top: 100px;
+    }
+    input {
+        max-width: 400px;
+        margin: 0 auto;
+    }
+    .footer-text {
+        margin-top: 40px;
     }
 }
 
@@ -616,11 +651,8 @@ section#footer {
   text-align: center;
 }
 
-.footer-text {
-    margin-top: 40px;
+.semitrans {
+  background: rgba(0,0,0,.4)
 }
 
-#footer input {
-    max-width: 400px;
-    margin: 0 auto;
-}
+
